// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-chip-list> Component Snippet display: block 1`] = `
<bolt-code-snippet display="block"
                   lang="html"
                   syntax="light"
                   bolt-component
>
  <pre class="c-bolt-code-snippet">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block nohighlight"
          is="shadow-root"
    >
      some snippet code
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-chip-list> Component Snippet display: inline 1`] = `
<bolt-code-snippet display="inline"
                   lang="html"
                   syntax="light"
                   bolt-component
>
  <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--inline nohighlight"
        is="shadow-root"
  >
    some snippet code
  </code>
</bolt-code-snippet>
`;

exports[`<bolt-chip-list> Component Snippet language: css 1`] = `
<bolt-code-snippet display="block"
                   lang="css"
                   syntax="light"
                   bolt-component
>
  <pre class="c-bolt-code-snippet">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block nohighlight"
          is="shadow-root"
    >
      This is css
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-chip-list> Component Snippet language: html 1`] = `
<bolt-code-snippet display="block"
                   lang="html"
                   syntax="light"
                   bolt-component
>
  <pre class="c-bolt-code-snippet">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block nohighlight"
          is="shadow-root"
    >
      This is html
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-chip-list> Component Snippet language: js 1`] = `
<bolt-code-snippet display="block"
                   lang="js"
                   syntax="light"
                   bolt-component
>
  <pre class="c-bolt-code-snippet">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block nohighlight"
          is="shadow-root"
    >
      This is js
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-chip-list> Component Snippet language: scss 1`] = `
<bolt-code-snippet display="block"
                   lang="scss"
                   syntax="light"
                   bolt-component
>
  <pre class="c-bolt-code-snippet">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block nohighlight"
          is="shadow-root"
    >
      This is scss
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-chip-list> Component Snippet language: twig 1`] = `
<bolt-code-snippet display="block"
                   lang="twig"
                   syntax="light"
                   bolt-component
>
  <pre class="c-bolt-code-snippet">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block nohighlight"
          is="shadow-root"
    >
      This is twig
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-chip-list> Component Snippet syntax: dark 1`] = `
<bolt-code-snippet display="block"
                   lang="html"
                   syntax="dark"
                   bolt-component
>
  <pre class="c-bolt-code-snippet">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block nohighlight"
          is="shadow-root"
    >
      some snippet code
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-chip-list> Component Snippet syntax: light 1`] = `
<bolt-code-snippet display="block"
                   lang="html"
                   syntax="light"
                   bolt-component
>
  <pre class="c-bolt-code-snippet">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block nohighlight"
          is="shadow-root"
    >
      some snippet code
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-chip-list> Component Snippet syntax: none 1`] = `
<bolt-code-snippet display="block"
                   lang="html"
                   syntax="none"
                   bolt-component
>
  <pre class="c-bolt-code-snippet">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block nohighlight"
          is="shadow-root"
    >
      some snippet code
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-chip-list> Component basic usage 1`] = `
<bolt-code-snippet display="block"
                   lang="html"
                   syntax="light"
                   bolt-component
>
  <pre class="c-bolt-code-snippet">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block nohighlight"
          is="shadow-root"
    >
      some snippet code
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-chip-list> Component basic usage with attributes 1`] = `
<bolt-code-snippet display="block"
                   lang="html"
                   syntax="light"
                   bolt-component
>
  <pre data-foo="baz"
       class="c-bolt-code-snippet"
  >
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block nohighlight"
          is="shadow-root"
    >
      some snippet code
    </code>
  </pre>
</bolt-code-snippet>
`;
